--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
 
     <meta charset="UTF-8">
-    <title>Example Page</title>
+    <title>Drasta's Happy Little Git Space</title>
     <!-- Once a reset.css is used uncomment the following line to see how this stylesheet works-->
     <!--Try enabling and then disabling it more than once.-->
     <!-- <link rel="stylesheet" href="reset.css"> -->
@@ -14,15 +14,15 @@
 
   <body>
 
-  <h1>This is a header 1</h1>
+  <h1>A place to live!</h1>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus labore ut, eum! Repellat, beatae dolorem minus sapiente iste nihil explicabo impedit eos consequuntur illum corporis autem vitae cum aperiam mollitia.</p>
 
   <h2>This is a header 2</h2>
 
   <ul>
-    <li>Test</li>
-    <li>Test</li>
+    <li>A Room</li>
+    <li>Of One's Own</li>
     <li>Test</li>
     <li>Test</li>
   </ul>
