--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <blockquote>"Lock up your libraries if you like; but there is no gate, no lock, no bolt that you can set upon the freedom of my mind."
     <p><i>-- Virginia Woolfe</i></blockquote>
-  <h2>List of things I hate</h2>
+  <h2>A list of things I hate:</h2>
 
   <ul>
     <li>HTML</li>
