--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Once a reset.css is used uncomment the following line to see how this stylesheet works-->
     <!--Try enabling and then disabling it more than once.-->
     <!-- <link rel="stylesheet" href="reset.css"> -->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+<style="font-family:Calibri;">
     
   </head>
 
