--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Try enabling and then disabling it more than once.-->
     <!-- <link rel="stylesheet" href="reset.css"> -->
 <style>
-<font="Calibri">
+<font family="Calibri">
 </style>
 
     
@@ -35,7 +35,7 @@
   Learn About Echidnas</a><br>
       
     <nav>
-      <a href="#"><img src="And-Rasta.github.io/Hearts.jpg" alt="My Heart" width="400" height="300"></a>
+      <p><a href="#"><img src="And-Rasta.github.io/Hearts.jpg" alt="My Heart" width="400" height="300"></a>
       <br>
      <h3>Navigate somewhere:</h3>
         <a href="#">Tab</a> | <a href="#">Tab</a> | <a href="#">Tab</a> | <a href="#">Tab</a>
