--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Reset.css -->
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -6,11 +5,9 @@
 
     <meta charset="UTF-8">
     <title>Drasta's Happy Little Git Space</title>
-    <!-- Once a reset.css is used uncomment the following line to see how this stylesheet works-->
-    <!--Try enabling and then disabling it more than once.-->
-    <!-- <link rel="stylesheet" href="reset.css"> -->
+    <link rel="stylesheet" href="style.css">
 <style>
-<font family="Calibri">
+<font family="Lucida Sans Unicode">
 </style>
 
     
@@ -37,8 +34,8 @@
     <nav>
       <p><a href="#"><img src="And-Rasta.github.io/Hearts.jpg" alt="My Heart" width="400" height="300"></a>
       <br>
-     <h3>Navigate somewhere:</h3>
-        <a href="#">Tab</a> | <a href="#">Tab</a> | <a href="#">Tab</a> | <a href="#">Tab</a>
+     <h3>Navigate somewhere else:</h3>
+        <a href="#">Place 1</a> | <a href="#">Place 2</a> | <a href="#">Place 3</a> | <a href="#">Place 4</a>
     </nav>
       </font>
   </body>
