--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <title>Drasta's Happy Little Git Space</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <style>
-<font family="Lucida Sans Unicode">
+<font family="Lato"; "Lucida Grande"; "sans-serif";>
 </style>
 
     
