--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                       <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                     </div>
-                    <small class="text-muted">10/27/18s</small>
+                    <small class="text-muted">10/27/18</small>
                   </div>
                 </div>
               </div>
