trying to bring repo current

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://twitter.com/And_Rasta" class="text-white">Follow on Twitter</a></li>
+                <li><a href="https://twitter.com/And_Rasta" class="text-white">Follow on Twatter</a></li>
                 <li><a href="https://www.facebook.com/andrastav" class="text-white">Like on Facebook</a></li>
                 <li><a href="mailto:avangaea@gmail.com" class="text-white">Email me</a></li>
               </ul>
