--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
-                <li><a href="https://twitter.com/And_Rasta" class="text-white">Follow on Twatter</a></li>
-                <li><a href="https://www.facebook.com/andrastav" class="text-white">Like on Facebook</a></li>
+                  <li><a href="https://www.linkedin.com/in/andrasta-seatts-a21ab4a5/" class="text-white">Endorse / Throw tomatoes on LinkedIn</a></li>  
+                <li><a href="https://twitter.com/And_Rasta" class="text-white">Follow on Twitter</a></li>
+                <li><a href="https://www.facebook.com/andrastav" class="text-white">Stalk on Facebook</a></li>
                 <li><a href="mailto:avangaea@gmail.com" class="text-white">Email me</a></li>
               </ul>
             </div>
