Adding projects 6-8 to list

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <h1 class="jumbotron-heading">Andrasta's Git Hub</h1>
           <p class="lead text-muted">Projects created during Full Stack Development course at SMU.</p>
           <p>
-            <a href="#" class="btn btn-primary my-2">Hat Tip</a>
-            <a href="#" class="btn btn-secondary my-2">Finger Wag</a>
+            <a href="https://www.youtube.com/watch?v=OB4JDJiet5M" class="btn btn-primary my-2">Hat Tip</a>
+            <a href="https://tenor.com/search/finger-wag-gifs" class="btn btn-secondary my-2">Finger Wag</a>
           </p>
         </div>
       </section>
@@ -79,7 +79,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><img class="card2" img src="images/portfolio.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 1</strong><br></a>
+                  <p class="card-text"><strong>Project # 1</strong><br></a>
                     Build a basic portfolio using HTML & CSS.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -95,7 +95,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><img class="card2" img src="images/bootstrap.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 2</strong><br></a>
+                  <p class="card-text"><strong>Project # 2</strong><br></a>
                     Add Bootstrap & Responsiveness to Portfolio.</p>                  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -111,7 +111,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://and-rasta.github.io/Word-Guess-Game/"><img class="card2" img src="images/hangman.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 3</strong><br></a>
+                  <p class="card-text"><strong>Project # 3</strong><br></a>
                     Build a Word Guess / Hangman game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -128,7 +128,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://and-rasta.github.io/unit-4-game/"><img class="card2" img src="images/crystal.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 4</strong><br></a>
+                  <p class="card-text"><strong>Project # 4</strong><br></a>
                     Build a Crystal Collector game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -144,7 +144,7 @@
               <div class="card mb-4 shadow-sm">
                 <a href="https://and-rasta.github.io/TriviaGame/"><img class="card2" img src="images/trivia.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 5</strong><br></a>
+                  <p class="card-text"><strong>Project # 5</strong><br></a>
                     Build a JavaScript Trivia Game</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -158,10 +158,10 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <a href="https://and-rasta.github.io/GifTastic/"><img class="card2" img src="images/giphy.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 6</strong><br>
-                    TBD</p>
+                  <p class="card-text"><strong>Project # 6</strong><br>
+                    Use GIPHY API to build a dynamic gif search page. Call the API & use JavaScript & jQuery to update the site HTML</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -175,10 +175,10 @@
 
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <a href="https://and-rasta.github.io/TrainScheduler/"><img class="card2" img src="images/train.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 7</strong><br>
-                    TBD</p>  
+                  <p class="card-text"><strong>Project # 7</strong><br>
+                    Create a train scheduler app incorporating Firebase to host arrival & departure data. Retrieve and manipulate the info with Moment.js</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -191,10 +191,10 @@
             </div>
             <div class="col-md-4">
               <div class="card mb-4 shadow-sm">
-                <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <a href="https://and-rasta.github.io/Dothrakify/"><img class="card2" img src="images/dothrakify.JPG" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 8</strong><br>
-                    TBD</p>                      
+                  <p class="card-text"><strong>Project # 8</strong><br>
+                    Dothrakify - Translate song lyrics into Dothraki, using HTML, CSS/Bootstrap Framework, JavaScript, jQuery, & multiple ajax calls using the MusixMatch and Fun Translation APIs</p>                      
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -209,7 +209,7 @@
               <div class="card mb-4 shadow-sm">
                 <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Assignment # 9</strong><br>
+                  <p class="card-text"><strong>Project # 9</strong><br>
                     TBD</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -221,6 +221,54 @@
                 </div>
               </div>
             </div>
+            <div class="col-md-4">
+                <div class="card mb-4 shadow-sm">
+                  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                  <div class="card-body">
+                    <p class="card-text"><strong>Project # 9</strong><br>
+                      TBD</p>  
+                  <div class="d-flex justify-content-between align-items-center">
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      </div>
+                      <small class="text-muted">11/17/18</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text"><strong>Project # 9</strong><br>
+                        TBD</p>  
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        </div>
+                        <small class="text-muted">11/17/18</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>              
+                <div class="col-md-4">
+                    <div class="card mb-4 shadow-sm">
+                      <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text"><strong>Project # 9</strong><br>
+                          TBD</p>  
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                          </div>
+                          <small class="text-muted">11/17/18</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
           </div>
         </div>
       </div>
