Adding projects 6-8 to list

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <div class="card mb-4 shadow-sm">
                   <a href="https://and-rasta.github.io/GifTastic/"><img class="card2" img src="images/giphy.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Project # 6</strong><br>
+                  <p class="card-text"><strong>Project # 6</strong><br></a>
                     Use GIPHY API to build a dynamic gif search page. Call the API & use JavaScript & jQuery to update the site HTML</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -177,7 +177,7 @@
               <div class="card mb-4 shadow-sm">
                   <a href="https://and-rasta.github.io/TrainScheduler/"><img class="card2" img src="images/train.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Project # 7</strong><br>
+                  <p class="card-text"><strong>Project # 7</strong><br></a>
                     Create a train scheduler app incorporating Firebase to host arrival & departure data. Retrieve and manipulate the info with Moment.js</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -193,7 +193,7 @@
               <div class="card mb-4 shadow-sm">
                   <a href="https://and-rasta.github.io/Dothrakify/"><img class="card2" img src="images/dothrakify.JPG" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text"><strong>Project # 8</strong><br>
+                  <p class="card-text"><strong>Project # 8</strong><br></a>
                     Dothrakify - Translate song lyrics into Dothraki, using HTML, CSS/Bootstrap Framework, JavaScript, jQuery, & multiple ajax calls using the MusixMatch and Fun Translation APIs</p>                      
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
@@ -221,11 +221,12 @@
                 </div>
               </div>
             </div>
+
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                   <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                   <div class="card-body">
-                    <p class="card-text"><strong>Project # 9</strong><br>
+                    <p class="card-text"><strong>Project # 10</strong><br>
                       TBD</p>  
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
@@ -237,11 +238,12 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-md-4">
                   <div class="card mb-4 shadow-sm">
                     <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text"><strong>Project # 9</strong><br>
+                      <p class="card-text"><strong>Project # 11</strong><br>
                         TBD</p>  
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
@@ -257,7 +259,7 @@
                     <div class="card mb-4 shadow-sm">
                       <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&bg=55595c&fg=eceeef&text=Thumbnail" alt="Card image cap">
                       <div class="card-body">
-                        <p class="card-text"><strong>Project # 9</strong><br>
+                        <p class="card-text"><strong>Project # 12</strong><br>
                           TBD</p>  
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
