Adding links to repos

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     Build a basic portfolio using HTML & CSS.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">09/22/18</small>
                   </div>
@@ -99,8 +99,8 @@
                     Add Bootstrap & Responsiveness to Portfolio.</p>                  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">09/29/18</small>
                   </div>
@@ -115,8 +115,8 @@
                     Build a Word Guess / Hangman game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
                     </div>
                     <small class="text-muted">10/06/18</small>
                   </div>
@@ -132,8 +132,8 @@
                     Build a Crystal Collector game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">10/13/18</small>
                   </div>
@@ -148,8 +148,8 @@
                     Build a JavaScript Trivia Game</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">10/20/18</small>
                   </div>
@@ -164,8 +164,8 @@
                     Use GIPHY API to build a dynamic gif search page. Call the API & use JavaScript & jQuery to update the site HTML</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">10/27/18</small>
                   </div>
@@ -181,8 +181,8 @@
                     Create a train scheduler app incorporating Firebase to host arrival & departure data. Retrieve and manipulate the info with Moment.js</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">11/03/18</small>
                   </div>
@@ -197,8 +197,8 @@
                     Dothrakify - Translate song lyrics into Dothraki, using HTML, CSS/Bootstrap Framework, JavaScript, jQuery, & multiple ajax calls using the MusixMatch and Fun Translation APIs</p>                      
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">11/10/18</small>
                   </div>
@@ -213,8 +213,8 @@
                     TBD</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                     </div>
                     <small class="text-muted">11/17/18</small>
                   </div>
@@ -230,8 +230,8 @@
                       TBD</p>  
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                       </div>
                       <small class="text-muted">11/17/18</small>
                     </div>
@@ -247,8 +247,8 @@
                         TBD</p>  
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                         </div>
                         <small class="text-muted">11/17/18</small>
                       </div>
@@ -263,8 +263,8 @@
                           TBD</p>  
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
                           </div>
                           <small class="text-muted">11/17/18</small>
                         </div>
